--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="50sp"/>
 
     <EditText
-        android:id="@+id/email_regiter_et"
+        android:id="@+id/email_register_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -41,7 +41,7 @@
         android:id="@+id/password_et_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/email_regiter_et"
+        android:layout_alignStart="@+id/email_register_et"
         android:ems="10"
         android:layout_marginTop="150dp"
         android:gravity="center_horizontal"
@@ -52,10 +52,10 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="248dp"
-        android:text="Button" />
+        android:layout_marginTop="225dp"
+        android:text="@string/register_title" />
 
 
 </RelativeLayout>
